<resources>
    <string name="app_name">Illustrates</string>

    <!-- -->
    <string name="type_hello">HelloWorld</string>
    <string name="type_permission">Permission</string>
    <string name="type_recycler_view">RecyclerView</string>
    <string name="type_hard_ware">HardWare</string>
    <string name="type_hw_camera1">Camera1</string>
    <string name="type_hw_camera2">Camera2</string>
    <string name="type_hw_wlan_direct">WlanDirect</string>
    <string name="type_widget">Widget</string>
    <string name="type_rx_java">RxJava</string>


    <string name="unsupported_camera_device">该设备不支持照相机功能</string>

    <string name="wlan_devices_list">设备列表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
