<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zms.song.illustrates.MainActivity">

    <TextView
        android:id="@+id/hello_text_view"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/type_hello"
        android:background="?android:selectableItemBackground"/>

    <TextView
        android:id="@+id/permission_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/type_permission"
        android:background="?android:selectableItemBackground"/>

    <TextView
        android:id="@+id/recycler_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/type_recycler_view"
        android:background="?android:selectableItemBackground"/>

    <TextView
        android:id="@+id/hw_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/type_hard_ware"
        android:background="?android:selectableItemBackground"/>

</LinearLayout>
